Removed maps from Olympics voting, because was bugging on mobile

--- a/airline-web/public/stylesheets/main.css
+++ b/airline-web/public/stylesheets/main.css
@@ -227,6 +227,14 @@ h1, h2, h3, h4, h5, h6, .font-display {
   }
 }
 
+.three-up-grid {
+    display: grid;
+    grid-gap: 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    width: 100%;
+    margin-top: 10px;
+}
+
 .section-grid {
   display: grid;
   grid-template-columns: 1fr 1.618fr; /* Golden ratio proportions */
@@ -435,6 +443,7 @@ body.christmas {
 	display: table-row;
 	width: 100%;
 	height: 18px;
+	overflow: hidden;
 }
 
 
@@ -1430,7 +1439,6 @@ iframe.clip {
 .threshold-bar {
     position: relative;
     height: 4px;
-    width: 100%;
     border: 1px solid #555;
     border-radius: 25px;
     margin: auto;
@@ -1647,6 +1655,7 @@ i, .italic {
 .opacity-70 { opacity: 0.7; }
 .opacity-80 { opacity: 0.8; }
 .opacity-90 { opacity: 0.9; }
+.list-disc { list-style-type: disc; }
 .text-left { text-align: left; }
 .text-right { text-align: right; }
 .text-center { text-align: center; }
